Reemplazo iconos png por fontawesome y modifico formato del footer

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -2,5 +2,6 @@ $colorBlackLight:#333333;
 $colorBlackDark: #000000;
 $colorWhite: #FFFFFF;
 $colorGrayLight: #D2D2D2;
+$colorGrayDark: #8A8A8A;
 $colorTableBorder: #F5F5F5;
 $colorSectionBg: #F7F7F7;
