--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ ul {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: auto auto 430px auto auto 313px;
+  grid-template-rows: auto auto 430px auto auto auto;
   column-gap: 20px;
   margin-top: 100px;
   grid-template-areas: "banner banner banner banner banner banner banner banner banner banner banner banner" "bio bio bio bio bio bio bio bio bio bio bio bio" "tour tour tour tour tour tour tour tour tour tour tour tour" "music music music music music music music music music music music music" "gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery" "footer footer footer footer footer footer footer footer footer footer footer footer"; }
@@ -78,13 +78,13 @@ ul {
       height: 60px;
       list-style: none;
       padding-top: 35px;
-      border-top: 5px solid #FFFFFF;
+      border-bottom: 5px solid #FFFFFF;
       transition-duration: 100ms;
       transition-timing-function: ease-in-out; }
       .header__navDesktop li:hover {
-        border-top: 5px solid #000000; }
+        border-bottom: 5px solid #000000; }
       .header__navDesktop li.active {
-        border-top: 5px solid #000000; }
+        border-bottom: 5px solid #000000; }
     .header__navDesktop a {
       color: #333333;
       font-family: Poppins;
@@ -115,7 +115,7 @@ ul {
   grid-template-rows: auto auto auto;
   justify-content: center;
   align-items: center;
-  grid-template-areas: "logo logo logo logo logo logo logo logo logo logo logo logo" "emptyLeft2 copyright copyright copyright copyright copyright copyright copyright copyright  copyright copyright upArrow" "socialMedia socialMedia socialMedia socialMedia socialMedia socialMedia socialMedia socialMedia socialMedia socialMedia socialMedia socialMedia";
+  grid-template-areas: "logo logo logo empty1 empty1 empty1 empty1 socialMedia socialMedia socialMedia socialMedia socialMedia" "logo logo logo empty2 empty2 empty2 empty2 socialMedia socialMedia socialMedia socialMedia socialMedia" "empty3left empty3left empty3left copyright copyright copyright copyright copyright copyright empty3right empty3right upArrow";
   text-align: center; }
   .footer__logoFooter {
     width: 193px;
@@ -131,16 +131,22 @@ ul {
     line-height: 27px;
     grid-area: copyright; }
   .footer__socialMediaContainer {
-    height: 40px;
+    height: 32px;
     text-align: center;
     margin: auto;
     grid-area: socialMedia; }
     .footer__socialMediaContainer a {
       margin: 0px 15px; }
-    .footer__socialMediaContainer img {
-      height: 32px; }
+      .footer__socialMediaContainer a i {
+        color: #8A8A8A; }
+        .footer__socialMediaContainer a i:hover {
+          color: #FFFFFF; }
   .footer__upArrow {
     grid-area: upArrow; }
+    .footer__upArrow span {
+      color: #8A8A8A; }
+      .footer__upArrow span:hover {
+        color: #FFFFFF; }
 
 .bio {
   grid-area: bio;
@@ -357,7 +363,7 @@ ul {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: auto auto 313px;
+  grid-template-rows: auto auto auto;
   column-gap: 20px;
   margin-top: 100px;
   grid-template-areas: "banner banner banner banner banner banner banner banner banner banner banner banner" "tour tour tour tour tour tour tour tour tour tour tour tour" "footer footer footer footer footer footer footer footer footer footer footer footer"; }
@@ -366,7 +372,7 @@ ul {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: auto auto auto 313px;
+  grid-template-rows: auto auto auto auto;
   column-gap: 20px;
   margin-top: 100px;
   grid-template-areas: "banner banner banner banner banner banner banner banner banner banner banner banner" "releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify" "discography discography discography discography discography discography discography discography discography discography discography discography" "footer footer footer footer footer footer footer footer footer footer footer footer"; }
@@ -379,14 +385,15 @@ ul {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: auto auto auto 313px;
+  grid-template-rows: auto auto auto auto;
   column-gap: 20px;
   margin-top: 100px;
   grid-template-areas: "banner banner banner banner banner banner banner banner banner banner banner banner" "images images images images images images images images images images images images" "videos videos videos videos videos videos videos videos videos videos videos videos" "footer footer footer footer footer footer footer footer footer footer footer footer"; }
 
 .galleryPhotos {
   grid-area: images;
-  padding: 0; }
+  padding: 0;
+  cursor: pointer; }
   .galleryPhotos__title {
     margin-left: 10%; }
   .galleryPhotos__photo {
@@ -462,7 +469,7 @@ section a {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: auto auto 313px;
+  grid-template-rows: auto auto auto;
   column-gap: 20px;
   margin-top: 100px;
   grid-template-areas: "banner banner banner banner banner banner banner banner banner banner banner banner" "main main main main main main main main main main main main" "footer footer footer footer footer footer footer footer footer footer footer footer"; }
@@ -472,6 +479,8 @@ section a {
   padding: 0;
   grid-column-start: 2;
   grid-column-end: 12; }
+  .containerContact__title {
+    margin-bottom: 24px; }
   .containerContact__email {
     color: #333333;
     font-weight: 600;
@@ -480,6 +489,20 @@ section a {
     font-family: Poppins;
     font-style: normal;
     line-height: 84.3%; }
+    .containerContact__email:hover {
+      color: #8A8A8A; }
+  .containerContact__socialMedia {
+    height: 32px;
+    text-align: center;
+    margin: auto; }
+    .containerContact__socialMedia a {
+      margin: 0px 4%; }
+    .containerContact__socialMedia i {
+      color: #333333; }
+      .containerContact__socialMedia i:hover {
+        color: #8A8A8A; }
+  .containerContact label {
+    color: #333333; }
 
 .form-control {
   width: calc(100% - 1.5rem);
@@ -635,7 +658,7 @@ form label {
       grid-area: photoRightDown; }
   .footer {
     grid-template-columns: repeat(5, 1fr);
-    grid-template-areas: "margin logo logo logo upArrow" "copyright copyright copyright copyright copyright" "socialMedia socialMedia socialMedia socialMedia socialMedia"; }
+    grid-template-areas: "margin logo logo logo upArrow" "socialMedia socialMedia socialMedia socialMedia socialMedia" "copyright copyright copyright copyright copyright"; }
   .tourTable__numeroTourDate {
     width: 10%;
     font-size: 30px; }
