--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,7 +49,7 @@ ul{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto auto 430px auto auto 313px;
+    grid-template-rows: auto auto 430px auto auto auto;
     column-gap: 20px;
     margin-top: 100px;
     grid-template-areas:
@@ -108,14 +108,14 @@ ul{
             height: 60px;
             list-style: none;
             padding-top: 35px;
-            border-top: 5px solid $colorWhite;
+            border-bottom: 5px solid $colorWhite;
             @include typeAndDurationAnimation(100ms,ease-in-out);
 
             &:hover{
-                border-top: 5px solid $colorBlackDark;
+                border-bottom: 5px solid $colorBlackDark;
             }
             &.active{
-                border-top: 5px solid $colorBlackDark;
+                border-bottom: 5px solid $colorBlackDark;
             }
         }
         a{
@@ -158,9 +158,9 @@ ul{
     justify-content: center;
     align-items: center;
     grid-template-areas:
-                        "logo logo logo logo logo logo logo logo logo logo logo logo"
-                        "emptyLeft2 copyright copyright copyright copyright copyright copyright copyright copyright  copyright copyright upArrow"
-                        "socialMedia socialMedia socialMedia socialMedia socialMedia socialMedia socialMedia socialMedia socialMedia socialMedia socialMedia socialMedia";
+                        "logo logo logo empty1 empty1 empty1 empty1 socialMedia socialMedia socialMedia socialMedia socialMedia"
+                        "logo logo logo empty2 empty2 empty2 empty2 socialMedia socialMedia socialMedia socialMedia socialMedia"
+                        "empty3left empty3left empty3left copyright copyright copyright copyright copyright copyright empty3right empty3right upArrow";
     text-align: center;
     &__logoFooter{
         width: 193px;
@@ -178,19 +178,28 @@ ul{
         grid-area: copyright;
     }
     &__socialMediaContainer{
-        height: 40px;
+        height: 32px;
         text-align: center;
         margin: auto;
         grid-area: socialMedia;
         a{
             margin: 0px 15px;
-        }
-        img{
-            height: 32px;
+            i{
+                color: $colorGrayDark;
+                &:hover{
+                    color:$colorWhite;
+                }
+            }
         }
     }
     &__upArrow{
         grid-area: upArrow;
+        span{
+            color: $colorGrayDark;
+            &:hover{
+                color: $colorWhite;
+            }
+        }
     }
 }
 
@@ -482,7 +491,7 @@ ul{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto auto 313px;
+    grid-template-rows: auto auto auto;
     column-gap: 20px;
     margin-top: 100px;
     grid-template-areas:
@@ -495,7 +504,7 @@ ul{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto auto auto 313px;
+    grid-template-rows: auto auto auto auto;
     column-gap: 20px;
     margin-top: 100px;
     grid-template-areas:
@@ -514,7 +523,7 @@ ul{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto auto auto 313px;
+    grid-template-rows: auto auto auto auto;
     column-gap: 20px;
     margin-top: 100px;
     grid-template-areas:
@@ -527,6 +536,7 @@ ul{
 .galleryPhotos{
     grid-area: images;
     padding: 0;
+    cursor: pointer;
 
     &__title{
         @extend .tituloSeccion;
@@ -630,7 +640,7 @@ section a{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto auto 313px;
+    grid-template-rows: auto auto auto;
     column-gap: 20px;
     margin-top: 100px;
     grid-template-areas:
@@ -647,6 +657,7 @@ section a{
 
     &__title{
         @extend .tituloSeccion;
+        margin-bottom: 24px;
     }
 
     &__email{  
@@ -657,6 +668,27 @@ section a{
         font-family: Poppins;
         font-style: normal;
         line-height: 84.3%;
+        &:hover{
+            color: $colorGrayDark;
+        }
+    }
+
+    &__socialMedia{
+        height: 32px;
+        text-align: center;
+        margin: auto;
+        a{
+            margin: 0px 4%;
+        }
+        i{
+            color: $colorBlackLight;
+            &:hover{
+                color: $colorGrayDark;
+            }
+        }
+    }
+    label{
+        color: $colorBlackLight;
     }
 }
 
@@ -868,8 +900,8 @@ form label{
         grid-template-columns: repeat(5, 1fr);
         grid-template-areas:
                             "margin logo logo logo upArrow"
-                            "copyright copyright copyright copyright copyright"
-                            "socialMedia socialMedia socialMedia socialMedia socialMedia";
+                            "socialMedia socialMedia socialMedia socialMedia socialMedia"
+                            "copyright copyright copyright copyright copyright";
     }
 
     .tourTable{
