--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,18 @@ ul {
 .bannerHome {
   grid-area: banner; }
 
+.videoWrapper {
+  position: relative;
+  padding-bottom: 47%;
+  height: 0; }
+
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+
 .footer {
   background-color: #000000;
   color: #FFFFFF;
