--- a/scss/style.scss
+++ b/scss/style.scss
@@ -148,6 +148,19 @@ ul{
     grid-area: banner;
 }
 
+.videoWrapper{
+    position: relative;
+    padding-bottom: 47%;
+    height: 0;
+}
+.videoWrapper iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .footer{
     background-color: $colorBlackDark;
     color: $colorWhite;
