--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ ul {
   margin: 0;
   padding: 0; }
 
-.tituloSeccion, .bio__titulo, .sectionMusicHome__title--margin, .sectionGalleryHome__title--margin, .galleryPhotos__title, .galleryVideos__title, .releasesAndSpotify__title, .discography__title, .containerContact__title {
+.tituloSeccion, .bio__titulo, .sectionMusicHome__title--margin, .sectionGalleryHome__title--margin, .galleryPhotos__title, .galleryVideos__title, .releasesAndSpotify__title, .discography__title, .containerContact__title, .error__title {
   font-family: Poppins;
   font-style: normal;
   color: #000000;
@@ -115,18 +115,8 @@ ul {
 
 .bannerHome {
   grid-area: banner; }
-
-.videoWrapper {
-  position: relative;
-  padding-bottom: 47%;
-  height: 0; }
-
-.videoWrapper iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%; }
+  .bannerHome video {
+    width: 100%; }
 
 .footer {
   background-color: #000000;
@@ -392,7 +382,7 @@ ul {
   margin-top: 100px;
   grid-template-areas: "banner banner banner banner banner banner banner banner banner banner banner banner" "releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify" "discography discography discography discography discography discography discography discography discography discography discography discography" "footer footer footer footer footer footer footer footer footer footer footer footer"; }
 
-.sectionDiscography .tituloSeccion, .sectionDiscography .bio__titulo, .sectionDiscography .sectionMusicHome__title--margin, .sectionDiscography .sectionGalleryHome__title--margin, .sectionDiscography .galleryPhotos__title, .sectionDiscography .galleryVideos__title, .sectionDiscography .releasesAndSpotify__title, .sectionDiscography .discography__title, .sectionDiscography .containerContact__title {
+.sectionDiscography .tituloSeccion, .sectionDiscography .bio__titulo, .sectionDiscography .sectionMusicHome__title--margin, .sectionDiscography .sectionGalleryHome__title--margin, .sectionDiscography .galleryPhotos__title, .sectionDiscography .galleryVideos__title, .sectionDiscography .releasesAndSpotify__title, .sectionDiscography .discography__title, .sectionDiscography .containerContact__title, .sectionDiscography .error__title {
   grid-area: title;
   margin-bottom: 28px; }
 
@@ -588,6 +578,24 @@ form label {
   to {
     transform: scale(1); } }
 
+.gridError {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: auto auto;
+  column-gap: 20px;
+  margin-top: 100px;
+  grid-template-areas: "error error error error error error error error error error error error" "footer footer footer footer footer footer footer footer footer footer footer footer"; }
+
+.error {
+  height: 900px;
+  grid-area: error; }
+  .error__title {
+    text-align: center;
+    font-size: 144px;
+    line-height: 144px;
+    margin-top: 100px; }
+
 @media only screen and (max-width: 768px) {
   .mainGrid {
     grid-template-rows: auto auto auto auto auto 313px; }
@@ -720,7 +728,7 @@ form label {
       text-align: justify; }
   .sectionTour {
     grid-area: tour; }
-  .sectionTour .tituloSeccion, .sectionTour .bio__titulo, .sectionTour .sectionMusicHome__title--margin, .sectionTour .sectionGalleryHome__title--margin, .sectionTour .galleryPhotos__title, .sectionTour .galleryVideos__title, .sectionTour .releasesAndSpotify__title, .sectionTour .discography__title, .sectionTour .containerContact__title {
+  .sectionTour .tituloSeccion, .sectionTour .bio__titulo, .sectionTour .sectionMusicHome__title--margin, .sectionTour .sectionGalleryHome__title--margin, .sectionTour .galleryPhotos__title, .sectionTour .galleryVideos__title, .sectionTour .releasesAndSpotify__title, .sectionTour .discography__title, .sectionTour .containerContact__title, .sectionTour .error__title {
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 10%; }
