--- a/scss/style.scss
+++ b/scss/style.scss
@@ -157,19 +157,10 @@ ul{
 
 .bannerHome{
     grid-area: banner;
-}
 
-.videoWrapper{
-    position: relative;
-    padding-bottom: 47%;
-    height: 0;
-}
-.videoWrapper iframe{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    video{
+        width: 100%;
+    }
 }
 
 .footer{
@@ -780,7 +771,31 @@ form label{
     to {transform:scale(1)}
 }
 
+.gridError{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto auto;
+    column-gap: 20px;
+    margin-top: 100px;
+    grid-template-areas:
+                        "error error error error error error error error error error error error"
+                        "footer footer footer footer footer footer footer footer footer footer footer footer";
 
+}
+
+.error{
+    height: 900px;
+    grid-area: error;
+
+    &__title{
+        @extend .tituloSeccion;
+        text-align: center;
+        font-size: 144px;
+        line-height: 144px;
+        margin-top: 100px;
+    }
+}
 
 @media only screen and (max-width: 768px){
     .mainGrid{
