--- a/views/404page.html
+++ b/views/404page.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Error | Nora En Pure</title>
 
-    <link rel="icon" type="image/x-icon" href="../images/favicon.ico"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/10772b8d31.js" crossorigin="anonymous"></script>
 </head>
-<body>
+
+<body class="bodyError">
     <header class="header">
         <div class="header__logoContainer">
             <a href="../index.html">
@@ -25,6 +30,7 @@
                 <img src="../images/icons/ico_mobile_menu.png" alt="Icono de menu mobile.">
             </a>
         </div>
+
         <nav class="header__navMobile" id="navMobile">
             <a href="../index.html">Home</a>
             <a href="./tour.html">Tour</a>
@@ -46,7 +52,9 @@
     <div class="gridError">
         <div class="error">
             <p class="error__title">404 Error</p>
+            <p class="error__subtitle">Ups, parece que esta página ya no existe.</p>
         </div>
+
         <footer class="footer">
             <img class="footer__logoFooter" src="../images/noraenpure_logo_big.png" alt="Logo de Nora En Pure.">
             <p class="footer__copyrightText">Copyright © 2021 / Sebastian Aranda</p>
@@ -60,19 +68,13 @@
                 <a aria-label="Ícono de Twitter." target="_blank" href="https://twitter.com/NoraEnPure">
                     <i class="fab fa-twitter fa-2x" title="Ícono de Twitter."></i>
                 </a>
-                <a aria-label="Ícono de YouTube." target="_blank" href="https://www.youtube.com/channel/UCdUXAN90UQV4sxNehj5Vflw">
+                <a aria-label="Ícono de YouTube." target="_blank"
+                    href="https://www.youtube.com/channel/UCdUXAN90UQV4sxNehj5Vflw">
                     <i class="fab fa-youtube fa-2x" title="Ícono de YouTube."></i>
                 </a>
-                <a aria-label="Ícono de Spotify." target="_blank" href="https://open.spotify.com/artist/24DO0PijjITGIEWsO8XaPs">
+                <a aria-label="Ícono de Spotify." target="_blank"
+                    href="https://open.spotify.com/artist/24DO0PijjITGIEWsO8XaPs">
                     <i class="fab fa-spotify fa-2x" title="Ícono de Spotify."></i>
-                </a>
-            </div>
-            <div class="footer__upArrow">
-                <a href="#topPage" aria-label="Ir a la parte superior de la página.">
-                    <span class="fa-stack" style="vertical-align: top;">
-                        <i aria-hidden="true" class="far fa-circle fa-stack-2x"></i>
-                        <i aria-hidden="true" class="fas fa-chevron-up fa-stack-1x" title="Ir a la parte superior de la página."></i>
-                    </span>
                 </a>
             </div>
         </footer>
@@ -89,7 +91,12 @@
             }
         }
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+        integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
